trying to solve home page layout problems

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-    background: url('/media/bookshop1.jpg') no-repeat center center fixed;
+    background: url('/media/boy.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: #555;
+    color: white;
     font-family: 'Garamond';
 }
 
@@ -19,6 +19,14 @@ body {
     width: 1.5rem;
 }
 
+.bg-white {
+  background-color: #FEFCF3!important;
+}
+
+.logo1 {
+  width: 30%;
+}
+
 .logo-font {
     text-transform: uppercase;
 }
@@ -26,6 +34,10 @@ body {
 .main-logo-link {
     width: fit-content;
     max-height: 140px;
+}
+
+.navbar-nav {
+  display: flex;
 }
 
 .account,
@@ -93,7 +105,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    background-color: #EFF5F5;
+    background-color: #FEFCF3;
     height: auto;
     padding: 1.25rem 1.25rem;
     margin-top: 2.5rem;
@@ -110,7 +122,7 @@ body {
   /* --- Footer --- */
 
     #footer {
-        background-color: #65647C!important;  
+        background-color: #FEFCF3!important;  
         height: 3.75rem;
         padding: 0.313rem 0;
         display: flex;
@@ -119,19 +131,19 @@ body {
   }
   
   .footer-social > a {
-    color: #EFF5F5;
+    color: black;
     padding: 0 4.6875vw; 
     text-decoration: none;
   }
   
   .footer-social > a:hover {  
-    color: #808080;
+    color: black;
     transition-duration: 0.5s;  
   }
   
   #footer-contact {
     height: 3.75rem;
-    background-color: rgb(238,238,238);
+    background-color: #FEFCF3;
   }
   
   .footer-contact-align {
